--- a/inject/inject.css
+++ b/inject/inject.css
@@ -1,3 +1,14 @@
-/**
- * Place your custom CSS styles here.
- **/
+#Google-Play-Music-Search {
+    /*background-color: #ff6666;*/
+    /*border: solid;*/
+    color: #a5939a;
+    /*padding: 15px 32px;*/
+    /*text-align: center;*/
+    text-decoration: none;
+    /*display: inline-block;*/
+    font-size: 12px;
+}
+
+#my-div{
+      padding-right: 5px;
+}
