--- a/inject/inject.css
+++ b/inject/inject.css
@@ -1,10 +1,13 @@
 #Google-Play-Music-Search {
     /*background-color: #ff6666;*/
     /*border: solid;*/
-    color: #a5939a;
+    /*color: #a5939a;*/
+    color: #B0B0B0;
     /*padding: 15px 32px;*/
     /*text-align: center;*/
     text-decoration: none;
+    vertical-align: middle;
+    height: 28px;
     /*display: inline-block;*/
     font-size: 12px;
 }
